using domain as bundle mi

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "test",
-    "application": "test",
+    "domain": "test",
     "depends": [""],
     "externalDependencies": {
         "node": {
